--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,8 +1,13 @@
-ax_s_config:
-    resource: "@AxSConfigBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+# SonataAdmin
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
