--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,6 +2,7 @@
 # http://symfony.com/doc/current/book/service_container.html
 imports:
     - { resource: "@AxSConfigBundle/Resources/config/services.yml" }
+    - { resource: "@AxSPageBundle/Resources/config/services.yml" }
 
 parameters:
 #    parameter_name: value
