--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -3,6 +3,8 @@
 imports:
     - { resource: "@AxSConfigBundle/Resources/config/services.yml" }
     - { resource: "@AxSPageBundle/Resources/config/services.yml" }
+    - { resource: "@AxSShopBundle/Resources/config/admin_order.yml" }
+    - { resource: "@AxSShopBundle/Resources/config/admin_shop.yml" }
 
 parameters:
 #    parameter_name: value
