--- a/app/config/admin.yml
+++ b/app/config/admin.yml
@@ -4,7 +4,10 @@ sonata_block:
         # Enable the SonataAdminBundle block
         sonata.admin.block.admin_list:
             contexts:   [admin]
-        # Your other blocks
+        # SonataUserBundle
+        sonata.user.block.menu:    # used to display the menu in profile pages
+        sonata.user.block.account: # used to display menu option (login option)
+        sonata.block.service.text: # used to if you plan to use Sonata user routes
 
 sonata_admin:
     dashboard:
@@ -22,3 +25,21 @@ sonata_admin:
                     groups: [Content, Config]
 
     persist_filters: true
+
+sonata_user:
+    security_acl: true
+    manager_type: orm
+
+fos_user:
+    db_driver:      orm # can be orm or odm
+    firewall_name:  main
+    user_class:     Application\Sonata\UserBundle\Entity\User
+
+    group:
+        group_class:   Application\Sonata\UserBundle\Entity\Group
+        group_manager: sonata.user.orm.group_manager
+        # If you're using doctrine orm (use sonata.user.mongodb.user_manager for mongodb)
+
+    service:
+        user_manager: sonata.user.orm.user_manager
+        # If you're using doctrine orm (use sonata.user.mongodb.group_manager for mongodb)
