--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -16,3 +16,8 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
+
+# SonataUser
+sonata_user_admin_security:
+    resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
+    prefix: /admin
