--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "sonata-project/admin-bundle": "^2.3",
         "sonata-project/doctrine-orm-admin-bundle": "^2.3",
         "gedmo/doctrine-extensions": "^2.4",
-        "sonata-project/easy-extends-bundle": "^2.1"
+        "sonata-project/easy-extends-bundle": "^2.1",
+        "sonata-project/user-bundle": "^2.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
