--- a/app/config/admin.yml
+++ b/app/config/admin.yml
@@ -25,9 +25,11 @@ sonata_admin:
                     groups: [Content, Config]
 
     persist_filters: true
+    security:
+        handler: sonata.admin.security.handler.role
 
 sonata_user:
-    security_acl: true
+    security_acl: false
     manager_type: orm
 
 fos_user:
@@ -38,8 +40,6 @@ fos_user:
     group:
         group_class:   Application\Sonata\UserBundle\Entity\Group
         group_manager: sonata.user.orm.group_manager
-        # If you're using doctrine orm (use sonata.user.mongodb.user_manager for mongodb)
 
     service:
         user_manager: sonata.user.orm.user_manager
-        # If you're using doctrine orm (use sonata.user.mongodb.group_manager for mongodb)
