--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,18 +5,27 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       [ROLE_USER, ROLE_SONATA_ADMIN]
-        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
-        SONATA:
-            #- ROLE_SONATA_PAGE_ADMIN_PAGE_EDIT  # if you are using acl then this line must be commented
+        ROLE_STAFF:
+            - ROLE_SONATA_ADMIN_AXS_PAGE_LIST
+            - ROLE_SONATA_ADMIN_AXS_PAGE_VIEW
+            - ROLE_SONATA_ADMIN_AXS_PAGE_EDIT
+            - ROLE_SONATA_ADMIN_AXS_CONFIG_LIST
+            - ROLE_SONATA_ADMIN_AXS_CONFIG_VIEW
+            - ROLE_SONATA_ADMIN_AXS_CONFIG_EDIT
+            - ROLE_SONATA_ADMIN_AXS_CONFIG_GROUP_LIST
+            - ROLE_SONATA_ADMIN_AXS_CONFIG_GROUP_VIEW
+            - ROLE_SONATA_ADMIN_AXS_CONFIG_GROUP_EDIT
+
+        ROLE_ADMIN:       [ROLE_USER, ROLE_SONATA_ADMIN, ROLE_STAFF]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN]
+
+    access_decision_manager:
+        strategy: unanimous
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         fos_userbundle:
             id: fos_user.user_manager
-
-    encoders:
-
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -24,7 +33,6 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        # -> custom firewall for the admin area of the URL
         admin:
             pattern:            /admin(.*)
             context:            user
@@ -37,33 +45,8 @@ security:
             logout:
                 path:           /admin/logout
             anonymous:          true
-        # -> end custom configuration
-
-        # default login area for standard users
-
-        # This firewall is used to handle the public login area
-        # This part is handled by the FOS User Bundle
-        main:
-            pattern:             .*
-            context:             user
-            form_login:
-                provider:       fos_userbundle
-                login_path:     /login
-                use_forward:    false
-                check_path:     /login_check
-                failure_path:   null
-            logout:             true
-            anonymous:          true
-
-    acl:
-        connection: default
 
     access_control:
-        # URL of FOSUserBundle which need to be available to anonymous users
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-
         # Admin login page needs to be accessed without credential
         - { path: ^/admin/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/logout$, role: IS_AUTHENTICATED_ANONYMOUSLY }
