--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -5,6 +5,7 @@ imports:
     - { resource: "@AxSPageBundle/Resources/config/services.yml" }
     - { resource: "@AxSShopBundle/Resources/config/admin_order.yml" }
     - { resource: "@AxSShopBundle/Resources/config/admin_shop.yml" }
+    - { resource: "@AxSArticleBundle/Resources/config/services.yml" }
 
 parameters:
 #    parameter_name: value
