--- a/app/config/admin.yml
+++ b/app/config/admin.yml
@@ -43,3 +43,8 @@ fos_user:
 
     service:
         user_manager: sonata.user.orm.user_manager
+
+pix_sortable_behavior:
+    db_driver: orm
+    position_field:
+        default: order
