--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "sonata-project/easy-extends-bundle": "^2.1",
         "sonata-project/user-bundle": "^2.2",
         "ircmaxell/password-compat": "^1.0",
-        "khepin/yaml-fixtures-bundle": "^1.0"
+        "khepin/yaml-fixtures-bundle": "^1.0",
+        "pixassociates/sortable-behavior-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
