--- a/src/AxS/ArticleBundle/composer.json
+++ b/src/AxS/ArticleBundle/composer.json
@@ -15,6 +15,8 @@
         "MIT"
     ],
     "require": {
+        "gedmo/doctrine-extensions": "^2.4",
+        "pixassociates/sortable-behavior-bundle": "^1.0"
     },
     "autoload": {
         "psr-0": {
