--- a/app/config/admin.yml
+++ b/app/config/admin.yml
@@ -22,7 +22,7 @@ sonata_admin:
                 position: right
                 type: sonata.admin.block.admin_list
                 settings:
-                    groups: [Content, Config]
+                    groups: [Content, Config, sonata_user]
 
     persist_filters: true
     security:
