--- a/app/config/admin.yml
+++ b/app/config/admin.yml
@@ -29,6 +29,10 @@ sonata_admin:
         handler: sonata.admin.security.handler.role
 
 sonata_user:
+    admin:
+        user:
+            class:      Application\Sonata\UserBundle\Admin\UserAdmin
+
     security_acl: false
     manager_type: orm
 
