--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "sonata-project/user-bundle": "^2.2",
         "ircmaxell/password-compat": "^1.0",
         "khepin/yaml-fixtures-bundle": "^1.0",
-        "pixassociates/sortable-behavior-bundle": "^1.0"
+        "pixassociates/sortable-behavior-bundle": "^1.0",
+        "sonata-project/intl-bundle": "^2.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
