--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "ircmaxell/password-compat": "^1.0",
         "khepin/yaml-fixtures-bundle": "^1.0",
         "pixassociates/sortable-behavior-bundle": "^1.0",
-        "sonata-project/intl-bundle": "^2.2"
+        "sonata-project/intl-bundle": "^2.2",
+        "vich/uploader-bundle": "^0.14.0",
+        "liip/imagine-bundle": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
