--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,7 @@
 axs_shop:
     resource: "@AxSShopBundle/Controller/"
     type:     annotation
-    prefix:   /
+    prefix:   /shop
 
 app:
     resource: "@AppBundle/Controller/"
