--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "pixassociates/sortable-behavior-bundle": "^1.0",
         "sonata-project/intl-bundle": "^2.2",
         "vich/uploader-bundle": "^0.14.0",
-        "liip/imagine-bundle": "^1.3"
+        "liip/imagine-bundle": "^1.3",
+        "knplabs/knp-menu": "^2.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
